--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 AuthType Basic
 AuthName "Área Restrita"
-AuthUserFile /path/para/seu/arquivo/de/usuarios
+AuthUserFile https://otiiagosilva.github.io/cv_otiiagosilva
 Require valid-user
